<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom|center_vertical"
    android:orientation="vertical" >
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margins"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/done_like_this" />

        <EditText
            android:id="@+id/textUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margins"
            android:layout_weight="1"
            android:capitalize="sentences"
            android:hint="@string/example_status"
            android:autoLink="web"
            android:linksClickable="false"
            android:clickable="true"          
			android:inputType="text" />

        <Button
            android:id="@+id/addImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margins"
            android:layout_weight="1"
            android:text="@string/imageButton" />


        <Button
            android:id="@+id/addAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margins"
            android:layout_weight="1"
            android:text="@string/audioButton" />

        <Button
            android:id="@+id/postButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margins"
            android:layout_weight="1"
            android:text="@string/postButton" />
        

</LinearLayout>